# WePlayer

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/peter/weplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  VideoChannel.cpp  VideoChannel.h  WePlayer.cpp  WePlayer.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/utils/: AndroidLogHelper.h  util.h
app/src/main/java/com/peter/weplayer/: MainActivity.java
app/src/main/java/com/peter/weplayer/player/: WePlayer.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/peter/weplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
